@@ -751,12 +751,10 @@ bool wxBitmap::Create(int width, int height, const wxDC& dc)
 {
     wxCHECK_MSG( dc.IsOk(), false, wxT("invalid HDC in wxBitmap::Create()") );
 
-    const double scale = dc.GetContentScaleFactor();
-
-    if ( !DoCreate(wxRound(width*scale), wxRound(height*scale), -1, dc.GetHDC()) )
+    if ( !DoCreate(width, height, -1, dc.GetHDC()) )
         return false;
 
-    GetBitmapData()->m_scaleFactor = scale;
+    GetBitmapData()->m_scaleFactor = dc.GetContentScaleFactor();
 
     return true;
 }
